# blade-deepseek

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  install.sh
.boss/orca-codex-harness/: architecture.md  design-brief.md  prd.md  tasks.md  tech-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: npm-token-check.yml  pages.yml  release.yml
.superpowers/sdd/: task-1-report.md  task-10-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
.trae/documents/: agent-loop-implementation-plan.md  approval-mode-refactor-plan.md  config-file-plan.md  five-features-plan.md  (+16 more)
crates/orca-core/: Cargo.toml
crates/orca-core/src/: approval_rules.rs  approval_types.rs  cancel.rs  conversation.rs  cost_types.rs  event_schema.rs  event_sink.rs  external_config.rs  goal_runtime.rs  goal_types.rs  hook_types.rs  lib.rs  mcp_types.rs  model.rs  plan_types.rs  proposed_plan.rs  provider_types.rs  retained_output.rs  subagent_config.rs  task_types.rs  thread_identity.rs  thread_item_projection.rs  tool_types.rs  verification.rs  workflow_types.rs
crates/orca-core/src/config/: file.rs  folder_trust.rs  mod.rs
crates/orca-provider/: Cargo.toml
crates/orca-provider/examples/: reasoning_replay_realapi.rs  summary_render_metrics.rs  summary_render_realapi.rs  update_plan_strict_realapi.rs
crates/orca-provider/src/: context.rs  deepseek_fixture.rs  deepseek_http.rs  http_client.rs  lib.rs  streaming.rs  summary_cache.rs  system_prompt.rs  tool_schema.rs
crates/orca-runtime/: Cargo.toml
crates/orca-runtime/examples/: goal_mode_realapi.rs
crates/orca-runtime/src/: agent_child.rs  agent_common.rs  agent_loop.rs  approval_resolution.rs  background_turn.rs  child_agent_entrypoints.rs  child_agent_loop_runner.rs  child_agent_loop_setup.rs  child_agent_provider_turn.rs  child_agent_response_folding.rs  child_agent_tests.rs  child_agent_types.rs  compaction.rs  controller.rs  cost.rs  extension.rs  goal_actor.rs  goal_store.rs  goal_tracker.rs  goal_verifier.rs  goals.rs  history.rs  hooks.rs  instructions.rs  lib.rs  lifecycle.rs  memory.rs  mentions.rs  model_response.rs  network_proxy.rs  protocol.rs  provider_stream.rs  provider_turn.rs  runtime_approval.rs  runtime_bash.rs  runtime_capability.rs  runtime_conversation_bootstrap.rs  runtime_directive.rs  runtime_event_projector.rs  runtime_host.rs  (+42 more)
crates/orca-runtime/src/acp/: agent.rs  event_map.rs  mod.rs  transport.rs
crates/orca-runtime/src/protocol/: command_exec.rs  events.rs  permissions.rs  shell.rs  thread.rs  turn.rs  wire.rs
crates/orca-runtime/src/server/: active_turn_manager.rs  active_turn_registry.rs  command_exec_manager.rs  command_exec_sandbox.rs  fuzzy_file_search_manager.rs  mcp_elicitation_manager.rs  mention_search_manager.rs  permission_manager.rs  router.rs  shell_manager.rs  user_input_manager.rs
crates/orca-runtime/src/server/processors/: command_exec.rs  fuzzy_file_search.rs  mcp_elicitation.rs  mention_search.rs  mod.rs  permission.rs  shell.rs  submit.rs  thread.rs  turn.rs  user_input.rs
crates/orca-runtime/src/thread_store/: live_thread.rs  local.rs  pagination.rs  projection.rs  types.rs  writer.rs
crates/orca-runtime/src/workflow/: draft.rs  host.mjs  host.rs  ipc.rs  mod.rs  report.rs  runner.rs  script.rs  state.rs  verifier.rs
crates/orca-runtime/tests/: acp_agent.rs  runtime_host.rs  task_output_store.rs
crates/orca-tools/: Cargo.toml
crates/orca-tools/src/: bash.rs  edit.rs  external.rs  file_admission.rs  git.rs  glob.rs  grep.rs  lib.rs  list_files.rs  process.rs  read_file.rs  registry.rs  skills.rs  update_goal.rs  update_plan.rs  web_search.rs  write_file.rs
crates/orca-tools/src/sandbox/: bwrap.rs  linux.rs  mod.rs  seatbelt.rs
crates/orca-tui/: Cargo.toml
crates/orca-tui/src/: action_dispatcher.rs  agent_runner.rs  agent_runtime.rs  agent_subagent_execution.rs  agent_tool_execution.rs  agent_workflow_execution.rs  app.rs  approval_actions.rs  approval_dialog_actions.rs  approval_mode_actions.rs  background_approval.rs  background_tasks.rs  bridge.rs  channels.rs  clipboard.rs  composer_input_actions.rs  composer_textarea.rs  diff.rs  display_text.rs  frame_scheduler.rs  global_actions.rs  hosted_runtime.rs  idle_key_actions.rs  idle_navigation_actions.rs  idle_submit_actions.rs  input_event_actions.rs  interaction_broker.rs  key_event_actions.rs  lib.rs  mention_menu_actions.rs  mention_search_manager.rs  operation_controller.rs  running_actions.rs  runtime_event_actions.rs  runtime_event_projection.rs  runtime_interaction_adapter.rs  runtime_interaction_adapter_tests.rs  selection.rs  session_picker_actions.rs  setup_actions.rs  (+14 more)
crates/orca-tui/src/commands/: mod.rs
docs/: ARCHIVE_COMPLETE.md  ARCHIVE_INDEX.md  agent-workflow-benchmark.md  claude-code-workflow-parity.md  goal-mode.md  harness-contract.md  production-roadmap.md  release-process.md  subagent-async-demo.sh  subagent-demo.sh  subagent-enhancement-plan.md  subagent-interaction.md  tools-comparison.md
examples/: key_debug.rs
npm/: platform-package.json
scripts/: cache-eval-real-api.sh
site/: index.html  package-lock.json  package.json  vite.config.ts
src/: acp.rs  cli.rs  config.rs  main.rs  mentions.rs  model.rs  server.rs
tests/: agent_loop_contract.rs  approval_contract.rs  exec_jsonl.rs  history_contract.rs  pages_workflow_contract.test.mjs  provider_contract.rs  runtime_lifecycle_contract.rs  server_runtime_contract.rs  session_server_contract.rs  shell_session_contract.rs  subagent_async_contract.rs  subagent_contract.rs  thread_store_contract.rs  tool_contract.rs  verification_contract.rs  workflow_cli_contract.rs  workflow_events_contract.rs  workflow_host_contract.rs  workflow_runtime_contract.rs  workflow_script_contract.rs  workflow_tool_contract.rs  workflow_types_contract.rs
(+463 files in other folders)
