[package]
name = "blade-deepseek"
version = "0.1.0"
edition = "2024"
description = "Orca: a DeepSeek-native coding agent runtime by Blade"
license = "MIT"
repository = "https://github.com/echoVic/blade-deepseek"

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
pulldown-cmark = { version = "0.12", default-features = false }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.27.0"
