[package]
name = "orca-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
orca-core = { path = "../orca-core" }
orca-file-search = { path = "../orca-file-search" }
orca-mcp = { path = "../orca-mcp" }
orca-tools = { path = "../orca-tools" }
orca-provider = { path = "../orca-provider" }
orca-approval = { path = "../orca-approval" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
zstd = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
globset = { workspace = true }
nucleo = { workspace = true }
walkdir = { workspace = true }
crossbeam-channel = { workspace = true }
libc = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
agent-client-protocol = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
orca-mcp = { path = "../orca-mcp", features = ["test-utils"] }
tempfile = { workspace = true }
